--- a/app/src/main/res/layout/smain_navi.xml
+++ b/app/src/main/res/layout/smain_navi.xml
@@ -48,7 +48,6 @@
         android:layout_height="match_parent"
         android:text="TextView"
         android:visibility="visible" />-->
-
     <include
         android:id="@+id/navi_6"
         layout="@layout/item_navi_btn"
@@ -56,7 +55,7 @@
         android:layout_height="match_parent"
         android:text="TextView"
         android:visibility="visible" />
-
+    <!--
     <include
         android:id="@+id/navi_7"
         layout="@layout/item_navi_btn"
@@ -71,7 +70,7 @@
         android:layout_width="65dp"
         android:layout_height="match_parent"
         android:text="TextView"
-        android:visibility="visible" />
+        android:visibility="visible" />-->
 
     <include
         android:id="@+id/navi_9"
@@ -81,7 +80,7 @@
         android:layout_weight="1"
         android:text="TextView"
         android:visibility="visible" />
-
+    <!--
     <include
         android:id="@+id/navi_10"
         layout="@layout/item_navi_btn"
@@ -98,6 +97,6 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="TextView"
-        android:visibility="visible" />
+        android:visibility="visible" />-->
 
 </LinearLayout>
